--- a/locale/es.po
+++ b/locale/es.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TooManyFiles\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-19 09:51+0200\n"
+"POT-Creation-Date: 2018-08-20 10:27+0200\n"
 "PO-Revision-Date: 2015-03-22 18:51+0100\n"
 "Last-Translator: root <turulomio@yahoo.es>\n"
 "Language-Team: Spanish\n"
@@ -60,14 +60,8 @@ msgstr "Hay ficheros y directorios con patrónes de fecha y hora en la ruta actu
 msgid "Not developed yet"
 msgstr "No desarrollado todavía"
 
-msgid "Remains"
-msgstr "Permanece"
-
 msgid "Delete"
 msgstr "Borrado"
-
-msgid "Too young to delete"
-msgstr "Muy joven para borrar"
 
 msgid "Over max number of files"
 msgstr "Supera el número de ficheros a guardar"
@@ -102,11 +96,17 @@ msgstr "Estado de los ficheros para borrar:"
 msgid "So, {} files have been deleted and {} files have been kept."
 msgstr "De esta manera, {} ficheros se han borrado y {} ficheros se han guardado."
 
+msgid "Remains"
+msgstr "Permanece"
+
+msgid "Too young to delete"
+msgstr "Muy joven para borrar"
+
 msgid "Over max files"
 msgstr "Supera el número de ficheros a guardar"
 
-msgid "TooManyFiles was executed at {}"
-msgstr "TooManyFiles fue ejecutado a las {}"
+msgid "{} TooManyFiles in {} detected {} files with pattern {}"
+msgstr "{} TooManyFiles en {} detectó {} ficheros con el patrón {}"
 
 msgid "Created {} files in the directory 'example'"
 msgstr "Creados {} ficheros en el directorio 'example'"
@@ -199,6 +199,9 @@ msgstr "Listamos los ficheros que han quedado"
 
 msgid "That's all"
 msgstr "Eso es todo"
+
+#~ msgid "TooManyFiles was executed at {}"
+#~ msgstr "TooManyFiles fue ejecutado a las {}"
 
 #~ msgid "Sets output language"
 #~ msgstr "Establece el lenguaje de salida"
