--- a/locale/toomanyfiles.pot
+++ b/locale/toomanyfiles.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-20 10:29+0200\n"
+"POT-Creation-Date: 2018-08-20 18:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,16 +44,10 @@ msgstr ""
 msgid "Sets the date and time pattern to search in the current directory filenames. It uses python strftime function format."
 msgstr ""
 
-msgid "There are files with datetime patterns with different roots"
+msgid "I can't continue, there are different filename roots with date and time patterns:"
 msgstr ""
 
-msgid "You have to correct it"
-msgstr ""
-
-msgid "Exiting..."
-msgstr ""
-
-msgid "There are files and directories with date and time patterns in the current path"
+msgid "I can't continue, there are files and directories with date and time patterns in the current path"
 msgstr ""
 
 msgid "Not developed yet"
@@ -63,18 +57,6 @@ msgid "Delete"
 msgstr ""
 
 msgid "Over max number of files"
-msgstr ""
-
-msgid "R"
-msgstr ""
-
-msgid "D"
-msgstr ""
-
-msgid "Y"
-msgstr ""
-
-msgid "O"
 msgstr ""
 
 msgid "Directories status pretending:"
@@ -98,19 +80,34 @@ msgstr ""
 msgid "Remains"
 msgstr ""
 
+msgid "R"
+msgstr ""
+
+msgid "D"
+msgstr ""
+
 msgid "Too young to delete"
+msgstr ""
+
+msgid "Y"
 msgstr ""
 
 msgid "Over max files"
 msgstr ""
 
+msgid "O"
+msgstr ""
+
 msgid "{} TooManyFiles in {} detected {} files with pattern {}"
 msgstr ""
 
-msgid "Created {} files in the directory 'example'"
+msgid "Different examples have been created in the directory 'toomanyfiles_examples'"
 msgstr ""
 
-msgid "Created {} directories and files in the directory 'example_directories'"
+msgid "'toomanyfiles_examples' directory removed"
+msgstr ""
+
+msgid "I can't remove 'toomanyfiles_examples' directory"
 msgstr ""
 
 msgid "Search date and time patterns to delete innecesary files or directories"
@@ -119,7 +116,10 @@ msgstr ""
 msgid "Developed by Mariano Muñoz 2018-{}"
 msgstr ""
 
-msgid "Create two example directores named 'example' and 'example_directories'"
+msgid "Create example directories"
+msgstr ""
+
+msgid "Remove example directories'"
 msgstr ""
 
 msgid "Removes files permanently"
@@ -163,7 +163,7 @@ msgstr ""
 msgid "We are going to create an example directory to learn how to use it"
 msgstr ""
 
-msgid "We are going to see the 10 last files of this directory"
+msgid "We are going to see the 10 last files of directory 'toomanyfiles_examples/files'"
 msgstr ""
 
 msgid "We can see files with temporal pattern 'YYYYmmdd HHMM' with a day variation"
@@ -179,9 +179,6 @@ msgid "So, We want to keep the last 5 files because they are too recent."
 msgstr ""
 
 msgid "We want to keep the first file of each month from the rest of the files until a max number the files of 15."
-msgstr ""
-
-msgid "We enter in the example directory."
 msgstr ""
 
 msgid "We make a simulation with --pretend"
